Fix TextBox clear button alignment (T640236)

--- a/styles/widgets/common/textEditor.less
+++ b/styles/widgets/common/textEditor.less
@@ -68,6 +68,7 @@
     width: 34px;
     position: relative;
     cursor: pointer;
+    text-align: justify;
 
     .dx-icon-clear {
         position: absolute;
